--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <header class="top-bar">
-            <img src="assets/icon.png" alt="Logo" class="logo"> <!-- Adicione o caminho correto para o logo -->
+            <img src="assets/logo.jpg" alt="Logo" class="logo"> <!-- Adicione o caminho correto para o logo -->
             <h1>Studio Eledi</h1>
             <a href="https://pay.kiwify.com.br/0FlfcYO" class="buy-button-top">Comprar Agora</a>
         </header>
